<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Free Bike</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="emailid">Email id (optional)</string>
    <string name="username">User name</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="signup">Sign Up(New user)</string>
    <string name="title_activity_track">TrackActivity</string>

</resources>
